--- a/Project 1 Satoker/index.html
+++ b/Project 1 Satoker/index.html
@@ -8,6 +8,7 @@
         <script src="script/deck.js"></script>
         <script src="script/player.js"></script>
         <script src="script/game.js"></script>
+        <script src="script/main.js"></script>
     </head>
 
     <body>
