--- a/Project 1 Satoker/index.html
+++ b/Project 1 Satoker/index.html
@@ -13,6 +13,7 @@
         <script src="script/deck.js"></script>
         <script src="script/player.js"></script>
         <script src="script/game.js"></script>
+        <script src="script/cards.js"></script>
         <script src="script/main.js"></script>
         <!-- <script src="script/houseRules.js"></script> -->
        
@@ -20,19 +21,49 @@
 
     <body>
         <!-- cc === community card -->
-        <section id="board">
-            
-            <section id="communityCards">
-                <div>
-                    <span class="communityCardSize flop" id="cc1"><img src="images/small1.png" alt=""></span>
-                    <span class="communityCardSize flop" id="cc2"><img src="images/small2.png" alt=""></span>
-                    <span class="communityCardSize flop" id="cc3"><img src="images/small3.png" alt=""></span>
+        <div id="screen">
+            <div id="board">
+                <div class="title">SATOKER</div>
+                <div id="players">
+                    <div class="playerProfile">
+                        <div class="playerHeader">
+                            <div class="playerName">John Mcafee</div>
+                            <div class="holdings">$1000</div>
+                        </div>
+                        <div class="playerHand" id="p1"></div>
+                    </div>
+                    <div class="playerProfile">
+                        <div class="playerHeader">
+                            <div class="playerName">CZ</div>
+                            <div class="holdings">$1000</div>
+                        </div>
+                        <div class="playerHand" id="p2"></div>
+                    </div>
+                    <div class="playerProfile">
+                        <div class="playerHeader">
+                            <div class="playerName">Justin Sun</div>
+                            <div class="holdings">$1000</div>
+                        </div>
+                        <div class="playerHand" id="p3"></div>
+                    </div>  
                 </div>
-                <span class="communityCardSize" id="turn cc4"><img src="images/small2.png" alt=""></span>
-                <span class="communityCardSize" id="river cc5"><img src="images/small3.png" alt=""></span>
-            </section>
-
-        </section>
+                <div id="communityCards">
+                    <div class = 'flop-row'>
+                        <span class="communityCardSize flop" id="cc1"><img src="" alt=""></span>
+                        <span class="communityCardSize flop" id="cc2"><img src="" alt=""></span>
+                        <span class="communityCardSize flop" id="cc3"><img src="" alt=""></span>
+                        <span class="communityCardSize" id="cc4"><img src="" alt=""></span>
+                        <span class="communityCardSize" id="cc5"><img src="" alt=""></span>
+                    </div>
+                </div>
+                <div id="commandCenter">
+                    <div class="commandButton">Fold</div>
+                    <div class="commandButton">Check</div>
+                    <div class="commandButton">Bet</div>
+                    <div class="commandButton">All in</div>
+                </div>
+            </div>  
+        </div>
     </body>
 
 </html>
