Implemented algo highCard, onePair, twoPair

--- a/Project 1 Satoker/index.html
+++ b/Project 1 Satoker/index.html
@@ -10,6 +10,7 @@
             crossorigin="anonymous">
         </script>
         <script src="script/currency.js"></script>
+        <script src="script/houseRules.js"></script>
         <script src="script/deck.js"></script>
         <script src="script/player.js"></script>
         <script src="script/game.js"></script>
@@ -20,6 +21,7 @@
     </head>
 
     <body>
+        <div class="gameContainer">
         <!-- cc === community card -->
         <div id="screen">
             <div id="board">
@@ -63,6 +65,7 @@
                     <div class="commandButton">All in</div>
                 </div>
             </div>  
+        </div>
         </div>
     </body>
 
