--- a/Project 1 Satoker/welcome.html
+++ b/Project 1 Satoker/welcome.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Title of the document</title>
+<link rel="stylesheet" href="styles/styles.css">
 <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -12,14 +13,16 @@
 </head>
 
 <body>
-    <div>
-       <h1>Welcome to Satoker</h1>
-    </div>
-
-    <div>
-        <h3>How much will you be playing with?</h3>
-        <input  type="text"> 
-        <button id="start">Good Luck!</button>        
+    <div class="welcomeContainer">
+        <div>
+           <h1>Welcome to Satoker</h1>
+        </div>
+    
+        <div>
+            <h3>How much will you be playing with?</h3>
+            <input  type="text"> 
+            <a href="index.html" id="start">Good Luck!</a>        
+        </div>
     </div>
 </body>
 
