Successfully implemented flush, fullhouse, fourOfAKind

--- a/Project 1 Satoker/index.html
+++ b/Project 1 Satoker/index.html
@@ -20,8 +20,8 @@
        
     </head>
 
-    <body>
-        <div class="gameContainer">
+    <body class="gameContainer">
+        <div >
         <!-- cc === community card -->
         <div id="screen">
             <div id="board">
