--- a/Project 1 Satoker/index.html
+++ b/Project 1 Satoker/index.html
@@ -40,12 +40,12 @@
         <!-- cc === community card -->
         <div id="screen">
             <div id="board">
-                <div class="title">SATOKER</div>
+                <div class="gameTitle">SATOKER</div>
                 <div id="players">
                     <div class="playerProfile">
                         <div class="playerHeader">
-                            <div class="playerName">John Mcafee</div>
-                            <div class="holdings">$1000</div>
+                            <div id="inputPlayer" class="playerName">John Mcafee</div>
+                            <div id="inputAmount" class="holdings">$1000</div>
                         </div>
                         <div class="playerHand" id="p1"></div>
                         <div class="betAmount">10</div>
@@ -67,16 +67,21 @@
                         <div class="betAmount">10</div>
                     </div>  
                 </div>
+              <div class="middlerow">
+                <div>
 
-                <div id="communityCards">
-                    <div class = 'flop-row'>
-                        <span class="communityCardSize flop" id="cc1"><img src="" alt=""></span>
-                        <span class="communityCardSize flop" id="cc2"><img src="" alt=""></span>
-                        <span class="communityCardSize flop" id="cc3"><img src="" alt=""></span>
-                        <span class="communityCardSize" id="cc4"><img src="" alt=""></span>
-                        <span class="communityCardSize" id="cc5"><img src="" alt=""></span>
-                    </div>
                 </div>
+                <div id="communityCards">
+                  <div class = 'flop-row'>
+                      <span class="communityCardSize flop" id="cc1"><img src="" alt=""></span>
+                      <span class="communityCardSize flop" id="cc2"><img src="" alt=""></span>
+                      <span class="communityCardSize flop" id="cc3"><img src="" alt=""></span>
+                      <span class="communityCardSize" id="cc4"><img src="" alt=""></span>
+                      <span class="communityCardSize" id="cc5"><img src="" alt=""></span>
+                  </div>
+                </div>  
+                  <div id="dealButton" class="commandButton">Deal</div>                  
+              </div>
                 <div id="commandCenter">
                     <div class="commandButton">Fold</div>
                     <div class="commandButton">Check</div>
