--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
                     </div>
                     <div class="playerProfile">
                         <div class="playerHeader">
-                            <div class="playerName">CZ</div>
-                            <div class="holdings">$1000</div>
+                            <div class="playerName" id="p2name"></div>
+                            <div class="holdings" id="p2money"></div>
                         </div>
                         <div class="playerHand" id="p2"></div>
                         <div class="betAmount">10</div>
                     </div>
                     <div class="playerProfile">
                         <div class="playerHeader">
-                            <div class="playerName">Justin Sun</div>
-                            <div class="holdings">$1000</div>
+                            <div class="playerName" id="p3name"></div>
+                            <div class="holdings" id="p3money"></div>
                         </div>
                         <div class="playerHand" id="p3"></div>
                         <div class="betAmount">10</div>
@@ -78,11 +78,11 @@
                     </div>
                     <div id="communityCards">
                         <div class = 'flop-row'>
-                            <span class="communityCardSize flop cardbackground" id="cc1"><img src="" alt=""></span>
-                            <span class="communityCardSize flop cardbackground" id="cc2"><img src="" alt=""></span>
-                            <span class="communityCardSize flop cardbackground" id="cc3"><img src="" alt=""></span>
-                            <span class="communityCardSize cardbackground" id="cc4"><img src="" alt=""></span>
-                            <span class="communityCardSize cardbackground" id="cc5"><img src="" alt=""></span>
+                            <span class="communityCardSize flop" id="cc1"><img src="" alt=""></span>
+                            <span class="communityCardSize flop" id="cc2"><img src="" alt=""></span>
+                            <span class="communityCardSize flop" id="cc3"><img src="" alt=""></span>
+                            <span class="communityCardSize" id="cc4"><img src="" alt=""></span>
+                            <span class="communityCardSize" id="cc5"><img src="" alt=""></span>
                         </div>
                     </div>
                     <div class="flex-end">  
