Pre - looping of rounds

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                             <div class="playerName" id="p2name"></div>
                             <div class="holdings" id="p2money"></div>
                         </div>
-                        <div class="playerHand" id="p2"></div>
+                        <div class="playerHand" id="p2">
+                            <div class="cardbackground"></div>
+                            <div class="cardbackground"></div>
+                        </div>
                         <div class="betAmount">10</div>
                     </div>
                     <div class="playerProfile">
@@ -66,7 +69,10 @@
                             <div class="playerName" id="p3name"></div>
                             <div class="holdings" id="p3money"></div>
                         </div>
-                        <div class="playerHand" id="p3"></div>
+                        <div class="playerHand" id="p3">
+                                <div class="cardbackground"></div>
+                                <div class="cardbackground"></div>
+                            </div>
                         <div class="betAmount">10</div>
                     </div>  
                 </div>
@@ -86,7 +92,7 @@
                         </div>
                     </div>
                     <div class="flex-end">  
-                        <div id="dealButton" class="commandButton">Deal</div>     
+                        <div id="dealButton" class="commandButton"></div>     
                     </div >  
                 </div>
                 <div id="commandCenter">
